--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "homepage": "https://jackwatson.io",
   "scripts": {
     "start": "webpack serve --port 3000",
     "build": "NODE_ENV=production webpack"
@@ -14,10 +15,10 @@
     "react-lazy-load": "^4.0.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.17.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "@babel/core": "^7.23.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
