--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
+    "@babel/core": "^7.23.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotdotdot": "^1.3.1",
     "react-is": "^18.2.0",
     "react-lazy-load": "^4.0.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.17.0",
-    "styled-components": "^6.1.0",
-    "@babel/core": "^7.23.2"
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
